--- a/app/assets/stylesheets/training_platform/projects.css.scss
+++ b/app/assets/stylesheets/training_platform/projects.css.scss
@@ -105,6 +105,11 @@
     .ace_bell, .ace_ques {
       margin:6.5px 5px;
       font-size:20px;
+      line-height: 33px;
+    }
+    .project-notification-list {
+      right: 62%;
+      padding: 0px;
     }
     .ace_plus {
       margin:6.5px 5px;
