--- a/app/views/training_platform/project_courses/index.html.erb
+++ b/app/views/training_platform/project_courses/index.html.erb
@@ -22,22 +22,7 @@
 						</div>
 						<!-- begin right-title -->
 						<div class="col-xs-6 ace_content_right_title">
-							<div class="col-xs-7 ace-serch">
-								<form class="form-search col-xs-12 ace-form-serch">
-									<span class="input-icon">
-										<input type="text" placeholder="请输入关键字" class="nav-search-input" id="nav-search-input" autocomplete="off" />
-										<i class="icon-search nav-search-icon"></i>
-									</span>
-								</form><!-- #nav-search -->
-							</div>
-							<div class="col-xs-5">
-								<a data-toggle="dropdown" class="dropdown-toggle" href="#">
-									<span class="glyphicon glyphicon-question-sign ace_ques pull-right" aria-hidden="true"></span>
-								</a>
-								<a data-toggle="dropdown" class="dropdown-toggle" href="#">
-									<i class="icon-bell-alt icon-animated-bell pull-right ace_bell"></i>
-								</a>
-							</div>
+							<%= render partial: "training_platform/share/right_header"%>
 						</div>
 						<!-- end right-title -->
 						<div class="col-xs-6 ace_content_page_left">
