--- a/app/views/share/_user_info.html.erb
+++ b/app/views/share/_user_info.html.erb
@@ -1,6 +1,6 @@
 <% if user_signed_in? %>
 	<li>
-		<%= link_to(my_messages_user_index_path) do %>
+		<%= link_to(my_messages_user_index_path, class: "dropdown-toggle", "data-toggle" => "") do %>
 			<i class="icon-bell-alt icon-animated-bell"><span class="badge-count"><%= current_user.user_notifications.unreads.count %></span></i>
 		<% end %>
 	</li>
