project right header

--- a/app/views/training_platform/projects/index.html.erb
+++ b/app/views/training_platform/projects/index.html.erb
@@ -20,13 +20,8 @@
                 <span class="glyphicon glyphicon-plus ace_plus" aria-hidden="true"></span><span class="ace_plus_word">添加项目</span>
               <% end %>
             </div>
-            <div class="col-xs-6 col-md-6 col-sm-6 col-lg-6 ace_content_right_title">
-              <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                <span class="glyphicon glyphicon-question-sign ace_ques pull-right" aria-hidden="true"></span>
-              </a>
-              <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                <i class="icon-bell-alt icon-animated-bell pull-right ace_bell"></i>
-              </a>
+            <div class="col-xs-6 col-md-6 col-sm-6 col-lg-6 ace_content_right_title" style = "min-height: 35px;">
+              
             </div>
           </div>
         </div>
