--- a/app/views/training_platform/projects/index.html.erb
+++ b/app/views/training_platform/projects/index.html.erb
@@ -14,19 +14,34 @@
       <div class="page-content">
         <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12">
           <div class="row">
-            
             <div class="col-xs-6 col-md-6 col-sm-6 col-lg-6 ace_content_left_title">
               <%= link_to(new_training_platform_project_path,remote: true, format: :js) do %>
                 <span class="glyphicon glyphicon-plus ace_plus" aria-hidden="true"></span><span class="ace_plus_word">添加项目</span>
               <% end %>
             </div>
-            <div class="col-xs-6 col-md-6 col-sm-6 col-lg-6 ace_content_right_title" style = "min-height: 35px;">
-              
+            <div class="col-xs-6 col-md-6 col-sm-6 col-lg-6 ace_content_right_title">
+              <!-- 搜索框 -->
+              <div class="col-sm-7 ace-serch">
+                <%= form_tag training_platform_root_path, method: :get, class: "form-search col-xs-12 ace-form-serch", style: "padding: 6px 0;" do %>
+                  <span class="input-icon">
+                    <%= text_field_tag :q, nil, placeholder: "请输入关键字", class: "nav-search-input", id: "nav-search-input" %>
+                    <i class="icon-search nav-search-icon"></i>
+                  </span>
+                  <%= submit_tag "搜索", style: "display: none;"%>
+                <% end %>
+              </div>
+
+              <a data-toggle="dropdown" class="dropdown-toggle" href="#">
+                <span class="glyphicon glyphicon-question-sign ace_ques pull-right" aria-hidden="true"></span>
+              </a>
+              <a data-toggle="dropdown" class="dropdown-toggle" href="#">
+                <i class="icon-bell-alt icon-animated-bell pull-right ace_bell"></i>
+              </a>
             </div>
           </div>
         </div>
         <div class="col-xs-12 col-md-12 col-sm-12 col-lg-12 main-bg">
-          <% @projects.each_with_index do |project,index| %>
+          <% @search.each_hit_with_result do |hit, project| %>
             <div class="col-xs-12 col-md-6 col-sm-6 col-lg-6 project-title-show">
               <div class="row blue-bg main">
                 <div class="col-xs-12 col-md-12 col-sm-12 col-lg-12 text-right">
