project notification show

--- a/app/assets/stylesheets/training_platform/projects.css.scss
+++ b/app/assets/stylesheets/training_platform/projects.css.scss
@@ -110,6 +110,7 @@
     .project-notification-list {
       right: 62%;
       padding: 0px;
+      min-width: 300px;
     }
     .ace_plus {
       margin:6.5px 5px;
