--- a/app/views/training_platform/share/_right_header.html.erb
+++ b/app/views/training_platform/share/_right_header.html.erb
@@ -7,68 +7,14 @@
   </form>
 </div>
 <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-  <!-- <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-  <span class="glyphicon glyphicon-question-sign ace_ques pull-right" aria-hidden="true"></span>
-  </a> -->
-    <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-      <i class="icon-bell-alt icon-animated-bell ace_bell"><span class="badge-count project">8</span></i>
-    </a>
+    
+    <%= link_to training_platform_project_user_notifications_path(@project), remote: true, format: :js, class: "dropdown-toggle", "data-toggle" => "dropdown"  do %>
+      <i class="icon-bell-alt icon-animated-bell ace_bell"><span class="badge-count project">
+        <%= current_user.try(:unread_notifications_group_by_project, @project.id) %>
+      </span></i>
+    <% end %>
 
-    <ul class="pull-right dropdown-navbar dropdown-menu dropdown-caret dropdown-close project-notification-list">
-      <li class="dropdown-header">
-        <i class="icon-warning-sign"></i>
-        8 条通知
-        <span class="pull-right"><a href="#">全部已读</a></span>
-      </li>
+    <ul id="projectNotificationList" class="pull-right dropdown-navbar dropdown-menu dropdown-caret dropdown-close project-notification-list">
 
-      <li>
-        <a href="#">
-          <div class="clearfix">
-            <span class="pull-left">
-              <i class="btn btn-xs no-hover btn-pink icon-comment"></i>
-              New Comments
-            </span>
-            <span class="pull-right badge badge-info">+12</span>
-          </div>
-        </a>
-      </li>
-
-      <li>
-        <a href="#">
-          <i class="btn btn-xs btn-primary icon-user"></i>
-          Bob just signed up as an editor ...
-        </a>
-      </li>
-
-      <li>
-        <a href="#">
-          <div class="clearfix">
-            <span class="pull-left">
-              <i class="btn btn-xs no-hover btn-success icon-shopping-cart"></i>
-              New Orders
-            </span>
-            <span class="pull-right badge badge-success">+8</span>
-          </div>
-        </a>
-      </li>
-
-      <li>
-        <a href="#">
-          <div class="clearfix">
-            <span class="pull-left">
-              <i class="btn btn-xs no-hover btn-info icon-twitter"></i>
-              Followers
-            </span>
-            <span class="pull-right badge badge-info">+11</span>
-          </div>
-        </a>
-      </li>
-
-      <li>
-        <a href="#">
-          See all notifications
-          <i class="icon-arrow-right"></i>
-        </a>
-      </li>
     </ul>
 </div>
