--- a/app/assets/stylesheets/training_platform/projects.css.scss
+++ b/app/assets/stylesheets/training_platform/projects.css.scss
@@ -162,14 +162,11 @@
       a {
         color: #000;
         display: block; 
+        text-decoration: none;
       }
       
       &:hover, &.active {
-        background-color: #5ac3b7;
-        color: #fff;
-        a {
-          color: #fff; 
-        }
+        background-color: #f3f9fd;
       }
 
       &.task-list-blank,&.task-list-blank:hover {
