--- a/app/views/training_platform/share/_left_nav.html.erb
+++ b/app/views/training_platform/share/_left_nav.html.erb
@@ -81,23 +81,23 @@
 
   <div class="sidebar-shortcuts" id="sidebar-shortcuts">
     <div class="sidebar-shortcuts-large" id="sidebar-shortcuts-large">
-      <span class="btn btn-success btn-sm tooltip-success" data-rel="tooltip" data-placement="bottom" title="新建任务列表">
-        <%= link_to( new_training_platform_project_task_category_path(@project.id),  "data-placement" => "opt", format: :js, remote: true) do %>
-        <i class="icon-tasks" style="color:#fff"></i>
-        <% end %>
-      </span>
+      <%= link_to( new_training_platform_project_task_category_path(@project.id),  "data-placement" => "opt", format: :js, remote: true,  class: "btn btn-success btn-sm tooltip-success") do %>
+        <span data-rel="tooltip" data-placement="bottom" title="新建任务列表">
+          <i class="icon-tasks" style="color:#fff"></i>
+        </span>
+      <% end %>
 
-      <span class="btn btn-warning btn-sm tooltip-warning" data-rel="tooltip" data-placement="bottom" title="邀请团队成员">
-        <%= link_to( new_training_platform_project_user_project_path, "data-toggle" => "tooltip", "data-placement" => "opt",  format: :js, remote: true) do %>
-        <i class="icon-group" style="color:#fff"></i>
-        <% end %>
-      </span>
-      
-      <span class="btn btn-danger btn-sm tooltip-error" data-rel="tooltip" data-placement="bottom" title="设置">
-        <%= link_to( "#", "data-toggle" => "tooltip", "data-placement" => "opt") do %>
-        <i class="icon-cogs" style="color:#fff"></i>
-        <% end %>
-      </span>
+      <%= link_to( new_training_platform_project_user_project_path, "data-toggle" => "tooltip", "data-placement" => "opt",  format: :js, remote: true,  class: "btn btn-warning btn-sm tooltip-warning") do %>
+        <span data-rel="tooltip" data-placement="bottom" title="邀请团队成员">
+          <i class="icon-group" style="color:#fff"></i>
+        </span>
+      <% end %>
+
+      <%= link_to( "#", "data-toggle" => "tooltip", "data-placement" => "opt", class: "btn btn-danger btn-sm tooltip-error") do %>
+        <span data-rel="tooltip" data-placement="bottom" title="设置">
+          <i class="icon-cogs" style="color:#fff"></i>
+        </span>
+      <% end %>
     </div>
 
     <div class="sidebar-shortcuts-mini" id="sidebar-shortcuts-mini">
