--- a/app/views/training_platform/user_notifications/index.js.erb
+++ b/app/views/training_platform/user_notifications/index.js.erb
@@ -1,1 +1,1 @@
-$("#projectNotificationList").html("<%= escape_javascript(render 'training_platform/share/notification_list') %>");
+$("#projectNotificationList").html("<%= escape_javascript(render partial: 'share/notification_list', locals: {user_notifications: @user_notifications, project: @project, is_training_platform: true }) %>");
