--- a/app/views/share/_user_info.html.erb
+++ b/app/views/share/_user_info.html.erb
@@ -1,5 +1,5 @@
 <% if user_signed_in? %>
-	<li>
+	<li class="dropdown">
 		<%= link_to(user_notifications_path, class: "dropdown-toggle", "data-toggle" => "dropdown", "aria-expanded" => "false", remote: true, format: :js, id: "notificationListLink") do %>
 			<i class="icon-bell-alt icon-animated-bell">
 				<% unread = current_user.user_notifications.unreads.count %>
@@ -34,10 +34,3 @@
 		<% end %>
 	</li>
 <% end %>
-<script type="text/javascript">
-	$(function(){
-		$('#notificationListLink').click(function(){
-			$('#notificationListLink').dropdown()
-		});
-	});
-</script>
