--- a/app/assets/stylesheets/training_platform/main.css.scss
+++ b/app/assets/stylesheets/training_platform/main.css.scss
@@ -3,6 +3,7 @@
 html,body{
 	height: 100%;
 }
+
 $color-sign: #5582ED;
 $color-green: #11BD9E;
 
@@ -30,4 +31,21 @@ $color-green: #11BD9E;
 	box-shadow:0px 1px 1px #C8C8C8 inset;                    /* For Latest Opera */
 	padding: 20px;
 	margin-top: 40px;
+}
+
+//项目成员列表
+.member-list {
+	max-height: 70px;
+	padding: 10px 0;
+	color: #919191;
+}
+.margin-tb {
+ margin: 14px 0;
+}
+
+.border-bottom {
+	border-bottom: dotted 1px #5ac3b7;
+}
+#error-info {
+	font-size: 12px;
 }
