--- a/app/views/training_platform/task_categories/_form.html.erb
+++ b/app/views/training_platform/task_categories/_form.html.erb
@@ -1,6 +1,6 @@
 <div  class="my-nav1">
   <!-- Nav tabs -->
-  <%= render "tags" %>
+  <%= render "training_platform/share/tags" %>
   <!-- Tab panes -->
   <div class="tab-content main">
     <div role="tabpanel" class="tab-pane active" id="home">
